# cli_editors

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  annooptim.sh  cathtml.c  config.h.in  configure  configure.ac  csv2anki  csv2html.c  gopt.c  gopt.h  hexsed  hnooptim.sh  master.css  master.html  master.xml  stringops.h
EgAnkiEmbeddedCommas/: shortrow.csv  test.csv  x.csv
EgAnkiNoEmbeddedCommas/: test.csv
EgWannaporn1/: README  addsound.sh  cpsound.sh  text2html.sh  wannaporns-65-thai-phrases-anki.txt  wannaporns-65-thai-phrases.html  wannaporns-65-thai-phrases.txt  wp1.txt  wp1addsound.sh  wp1en.csv
EgWannaporn2/: wannaporns-65-thai-phrases-p2.txt
EgWannaporn3/: wannaporns-65-thai-phrases-p3.txt
EgWannaporn4/: wannaporns-65-thai-phrases-p4.txt
EgWltcmNumbers/: control.xml  numbers.html  structure.csv  structure.html  wltcm_numbers.csv
EgWltcmVocab/: anki.csv  csv2anki.sh  extra_chars  getworkfiles.sh  oldvocab.xml  struct.xml  structure.html  vocab.epub  vocab.html  vocab.xml  vocab_appendix  wltcm_vocab.csv
src/Cathtml/: cathtml.c
src/Cathtml/.deps/: cathtml.Po
src/Csv2anki/: README  csv2anki.1  csv2anki.c  csv2anki.t2t  gopt.c  gopt.h
src/Csv2html/: README  c2hmaster.css  csv2html.c  csv2html.cfg  csv2html.t2t  gopt.c  gopt.h  updcfg.sh
src/Csv2html/.deps/: csv2html.Po  gopt.Po
src/Hexsed/: README  gopt.c  gopt.h  hexsed.1  hexsed.c  hexsed.t2t
src/Hexsed/.deps/: gopt.Po  hexsed.Po
src/Utils/: fileops.c  fileops.h  firstrun.c  firstrun.h  stringops.c
src/Utils/.deps/: fileops.Po  firstrun.Po  stringops.Po
